@@ -1,5 +1,80 @@
 NAME
-    Task::Unicode
+    Task::Unicode - Everything needed to work with Unicode data
+
+VERSION
+    This document describes Task::Unicode version 0.01.
+
+DESCRIPTION
+    This Task module installs everything needed for working with Unicode and
+    UTF-8 strings as well as a number of modules and utilities to assist in
+    development and debugging. It is not intended to be an all-inclusive
+    bundle of Unicode modules on the CPAN. Instead, it is a collection of
+    the essential and some of the most useful general-purpose modules.
+
+    This is an early release of Task::Unicode and the bundled module list is
+    not yet complete. Modules may be added or removed. Please contact the
+    author with suggestions for upcoming releases.
+
+    The brief module descriptions are currently taken directly from each
+    module. In the future, these will be slightly expanded and explained for
+    those with less Unicode knowledge.
+
+  MODULES
+    Unicode::Collate::Locale
+        Linguistic tailoring for DUCET via Unicode::Collate
+
+    Unicode::GCString
+        String as Sequence of UAX #29 Grapheme Clusters
+
+    Unicode::LineBreak
+        Line Folding for Plain Text
+
+    Unicode::Stringprep
+        Preparation of Internationalized Strings (RFC 3454)
+
+    utf8::all
+        Turn on Unicode—all of it
+
+  DEBUGGING
+    String::Dump
+        Dump strings of characters or bytes for printing and debugging
+
+    Encode::DoubleEncodedUTF8
+        Fix double-encoded UTF-8 bytes to the correct one
+
+  UTILITIES
+    App::Uni
+        Command-line utility to grep UnicodeData.txt
+
+    Unicode::Tussle
+        Tom’s Unicode Scripts So Life is Easier (only installed with Perl
+        5.14+)
+
+  SEE ALSO
+    This task requires Perl 5.8.0, which bundles the following important
+    modules.
+
+    charnames
+        Access to Unicode character names and named character sequences;
+        also define character names
+
+    utf8
+        Perl pragma to enable/disable UTF-8 (or UTF-EBCDIC) in source code
+
+    open
+        Perl pragma to set default PerlIO layers for input and output
+
+    Encode
+        Character encodings in Perl
+
+    Unicode::Collate
+        Unicode Collation Algorithm
+
+    Unicode::Normalize
+        Unicode Normalization Forms
+
+    Unicode::UCD
+        Unicode character database
 
 AUTHOR
     Nick Patch <patch@cpan.org>
