@@ -9,3 +9,13 @@ add_stopwords(<DATA>);
 all_pod_files_spelling_ok();
 
 __DATA__
+charnames
+CPAN
+DUCET
+EBCDIC
+Grapheme
+txt
+UAX
+UnicodeData
+utf
+UTF
