@@ -1,5 +1,6 @@
+# Revision history for Perl module Task::Unicode
 ---
 version: 0.01
-date:    XXX
+date:    2012-01-22
 changes:
-- First release
+  - First release
